--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ seoseong_ida/__pycache__
 app/migrations/__pycache__
 app/__pycache__
 app/views/__pycache__
+cafes/__pycache__
+cafes/migrations/__pycache__
 app/test_templates
 .env
 .DS_Store
