--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ seoseong_ida/settings.py
 db.sqlite3
 seoseong_ida/__pycache__
 app/migrations/__pycache__
+app/migrations
 app/__pycache__
 app/views/__pycache__
 cafes/__pycache__
