--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,155 @@
-seoseong_ida/settings.py
+# === Project specific ===
+# Django local stuff
 db.sqlite3
-seoseong_ida/__pycache__
-app/migrations/__pycache__
-app/__pycache__
-app/views/__pycache__
-cafes/__pycache__
-cafes/migrations/__pycache__
-app/test_templates
-app/migrations/*.py
-!app/migrations/__init__.py
+db.sqlite3-journal
+media/
+
+# 가상환경 / 로컬 설정
+venv/
 .env
-chatbot.ipynb
+.env.*
+
+# 파이썬 캐시
+__pycache__/
+*.pyo
+
+# 앱별로 절대 올리고 싶지 않은 것들
+app/agent.py
+app/migrations/
+cafes/migrations/
+
+# === Django / Python 공통 템플릿 ===
+
+# Logs
+*.log
+*.pot
+
+local_settings.py
+config.py
+
+# Byte-compiled / optimized / DLL files
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+.pybuilder/
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Environments (여분)
+.env.bak/
+venv.bak/
+env/
+ENV/
+
+# mkdocs documentation
+/site
+
+# mypy / pyre / pytype
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+.pytype/
+cython_debug/
+
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+.history/
+.ionide
+
+# macOS
 .DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+*.icloud
+
+
+tests.py
+*/tests.py
+test.html
 firebase_key.json
