Remove all migration folders

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ seoseong_ida/settings.py
 db.sqlite3
 seoseong_ida/__pycache__
 app/migrations/__pycache__
+app/migrations
 app/__pycache__
 app/views/__pycache__
+app/views_pkg/__pycache__
 cafes/__pycache__
 cafes/migrations/__pycache__
 app/test_templates
@@ -13,3 +15,6 @@ app/migrations/*.py
 chatbot.ipynb
 .DS_Store
 firebase_key.json
+app/agent.py
+cafes/migrations
+**/migrations/
